--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "stdio.h": "c",
         "stdlib.h": "c",
         "string.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "sstream": "c"
     }
 }
