--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-compiler/memeasm
 memeasm
 tmp.asm
 example.memeasm
 tmp
 tmp.o
-opcodes
-examples/Stalinsort/.idea
-examples/Stalinsort/stalinsort.S
+/examples/Stalinsort/stalinsort.S
+/examples/Stalinsort/.idea/
