--- a/.github/workflows/compile_and_run_test.yml
+++ b/.github/workflows/compile_and_run_test.yml
@@ -6,7 +6,7 @@ name: Compile and Run Test
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ main develop ]
   pull_request:
     branches: [ main develop ]
 
