--- a/examples/Stalinsort/Makefile
+++ b/examples/Stalinsort/Makefile
@@ -4,7 +4,7 @@ CFLAGS+=-std=gnu11 -g
 .PHONY: all clean
 
 all: stalinsort_test.c
-	memeasm -c -o stalinsort.S stalinsort.memeasm
+	memeasm -c -o stalinsort.S stalin-sort.memeasm
 	$(CC) -o stalinsort $^ stalinsort.S $(CFLAGS)
 
 clean:
