Fixed incorrect path

--- a/.github/workflows/create_installers.yml
+++ b/.github/workflows/create_installers.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Generate installer files
         run: |
           cd nfpm
-          ./nfpm/generateInstallers.sh
+          ./generateInstallers.sh
           cd ..
           
       - name: Archive debian installer
