--- a/.github/workflows/publish-aur.yml
+++ b/.github/workflows/publish-aur.yml
@@ -17,8 +17,7 @@ jobs:
 
     steps:
       - name: Install pacman-contrib dependencies
-      - run: |
-          sudo apt-get install libarchive
+        run: sudo apt-get install libarchive
       
       - name: Install pacman-contrib  
         run: |
