Added -g flag to Makefile

--- a/examples/toupper/Makefile
+++ b/examples/toupper/Makefile
@@ -4,7 +4,7 @@ CFLAGS+=-gstabs -no-pie
 .PHONY: all clean
 
 all: toupper_test.c
-	memeasm  -O -o toupper.o toupper.memeasm
+	memeasm  -g -O -o toupper.o toupper.memeasm
 	$(CC) -o toupper $^ toupper.o $(CFLAGS)
 
 clean:
