--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
+#Executable
 memeasm
+
+#Temporary files for local testing
 tmp.asm
 example.memeasm
 tmp
 tmp.o
 /examples/Stalinsort/stalinsort.S
-/examples/Stalinsort/.idea/
 test
 test.S
+
+#IDE files
+/examples/Stalinsort/.idea/
+.idea
+.vscode
+
 #compiledb used by clang tooling
 compile_commands.json
