--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -27,5 +27,8 @@ jobs:
       - name: Build Linux
         run: make debug
 
+      - name: Install mingw-w64
+        run: sudo apt-get install mingw-w64
+
       - name: Build Windows
         run: make windows
