--- a/.github/workflows/create_installers.yml
+++ b/.github/workflows/create_installers.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+
+      - name: Install mingw-w64
+        run: sudo apt-get install mingw-w64
       
       - name: Install nfpm
         run: |
