--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
 
-  build:
+  build_linux:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -32,3 +32,18 @@ jobs:
 
       - name: Build Windows
         run: make windows
+
+  build_windows:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Run Makefile
+        shell: powershell
+        run: |
+          $env:Path += ";C:\msys64\mingw64\bin"
+          mingw32-make.exe debug
+          
