--- a/.github/workflows/compilation_test.yml
+++ b/.github/workflows/compilation_test.yml
@@ -1,10 +1,9 @@
-# This is a basic workflow to help you get started with Actions
 
 name: Compilation Test
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # Triggers the workflow on push or pull request events but only for the main/develop branch
   push:
     branches: [ main, develop ]
   pull_request:
@@ -13,10 +12,8 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  compile_linux:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -31,3 +28,21 @@ jobs:
         
       - name: run the compiler on example.memeasm
         run: ./memeasm -S -d -o example.S .github/workflows/example.memeasm
+        
+  compile_windows:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Compile memeasm
+        shell: powershell
+        run: |
+          $env:Path += ";C:\msys64\mingw64\bin"
+          mingw32-make.exe debug     
+          
+      - name: Run compiler on example.memeasm
+        shell: powershell
+        run: ./memeasm.exe -S -d -o example.S .github\workflows\example.memeasm
