workflows: Downgrade windows-latest to windows-2019 In the hopes that this will solve the build issues

--- a/.github/workflows/compile_and_run_test.yml
+++ b/.github/workflows/compile_and_run_test.yml
@@ -27,7 +27,7 @@ jobs:
         run: ./tmp
         
   run_windows:
-      runs-on: windows-latest
+      runs-on: windows-2019
 
       steps:
         - uses: actions/checkout@v2
