--- a/.github/workflows/compile_and_run_test.yml
+++ b/.github/workflows/compile_and_run_test.yml
@@ -25,7 +25,10 @@ jobs:
 
       - name: Run the executable
         run: ./tmp
-        
+
+      - name: Check that compiling multiple input files works
+        run: ./memeasm -d -o tmp .github/workflows/multiple_files/*.memeasm
+
   run_windows:
       runs-on: windows-2019
 
@@ -36,15 +39,18 @@ jobs:
           shell: powershell
           run: |
             $env:Path += ";C:\msys64\mingw64\bin"
-            mingw32-make.exe debug     
+            mingw32-make.exe debug
 
         - name: Run compiler on runnable_example.memeasm
           shell: powershell
-          run: ./memeasm.exe -d -o tmp.exe .github\workflows\runnable_example.memeasm  
-          
+          run: ./memeasm.exe -d -o tmp.exe .github\workflows\runnable_example.memeasm
+
         - name: Run the executable
           shell: powershell
           run: ./tmp.exe
+
+      - name: Check that compiling multiple input files works
+        run: ./memeasm.exe -d -o tmp.exe .github/workflows/multiple_files/*.memeasm
 
   run_macos:
     runs-on: macos-latest
@@ -60,3 +66,6 @@ jobs:
 
       - name: Run the executable
         run: ./tmp
+
+      - name: Check that compiling multiple input files works
+        run: ./memeasm -d -o tmp .github/workflows/multiple_files/*.memeasm
