--- a/.github/workflows/compilation_test.yml
+++ b/.github/workflows/compilation_test.yml
@@ -1,7 +1,7 @@
 
 name: Compilation Test
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main/develop branch
   push:
@@ -25,10 +25,13 @@ jobs:
       # Runs a single command using the runners shell
       - name: compile the project
         run: make debug
-        
+
       - name: run the compiler on example.memeasm
         run: ./memeasm -S -d -o example.S .github/workflows/example.memeasm
-        
+
+      - name: Check that compiling multiple input files works
+        run: ./memeasm -d -o tmp .github/workflows/multiple_files/*.memeasm
+
   compile_windows:
     # The type of runner that the job will run on
     runs-on: windows-2019
@@ -41,11 +44,14 @@ jobs:
         shell: powershell
         run: |
           $env:Path += ";C:\msys64\mingw64\bin"
-          mingw32-make.exe debug     
-          
+          mingw32-make.exe debug
+
       - name: Run compiler on example.memeasm
         shell: powershell
         run: ./memeasm.exe -S -d -o example.S .github\workflows\example.memeasm
+
+        - name: Check that compiling multiple input files works
+          run: ./memeasm.exe -d -o tmp.exe .github/workflows/multiple_files/*.memeasm
 
   compile_macos:
     # The type of runner that the job will run on
@@ -62,3 +68,6 @@ jobs:
 
       - name: run the compiler on example.memeasm
         run: ./memeasm -S -d -o example.S .github/workflows/example.memeasm
+
+      - name: Check that compiling multiple input files works
+        run: ./memeasm -d -o tmp .github/workflows/multiple_files/*.memeasm
