--- a/.github/workflows/compilation_test.yml
+++ b/.github/workflows/compilation_test.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Function parser tests
         run: |
+          sudo make install
           cd .github/workflows/multiple_files
           make && return 0 || return 1 
           make fail_undefined && return 1 || return 0
