--- a/.github/workflows/compilation_test.yml
+++ b/.github/workflows/compilation_test.yml
@@ -76,6 +76,7 @@ jobs:
 
       - name: Function parser tests
         run: |
+          sudo make install
           cd .github/workflows/multiple_files
           make && exit 0 || exit 1 
           make fail_undefined && exit 1 || exit 0
