--- a/.github/workflows/compilation_test.yml
+++ b/.github/workflows/compilation_test.yml
@@ -37,6 +37,12 @@ jobs:
           make fail_undefined && exit 1 || exit 0
           make fail_no_main && exit 1 || exit 0
 
+      - name: Compile all code examples
+        run: |
+          sudo make install
+          cd examples
+          make
+
   compile_windows:
     # The type of runner that the job will run on
     runs-on: windows-2019
@@ -81,3 +87,8 @@ jobs:
           make && exit 0 || exit 1 
           make fail_undefined && exit 1 || exit 0
           make fail_no_main && exit 1 || exit 0
+      - name: Compile all code examples
+        run: |
+          sudo make install
+          cd examples
+          make
