Don't run in subshell

--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: Install and Build
         run: |
-          bash wasm/install_emcc.sh
+          wasm/install_emcc.sh
           make wasm
 
       - name: Deploy
