--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -14,6 +14,7 @@ jobs:
         run: |
           chmod +x wasm/install_emcc.sh
           wasm/install_emcc.sh
+          source "/opt/emsdk/emsdk_env.sh"
           make wasm
 
       - name: Deploy
