compile_and_run_test.yml: Also upload compiled executable

--- a/.github/workflows/compile_and_run_test.yml
+++ b/.github/workflows/compile_and_run_test.yml
@@ -68,3 +68,7 @@ jobs:
         with:
           name: crashes
           path: /cores
+      - uses: actions/upload-artifact@master # upload executable
+        with:
+          name: executable
+          path: ./tmp
