--- a/.github/workflows/compile_and_run_test.yml
+++ b/.github/workflows/compile_and_run_test.yml
@@ -47,7 +47,7 @@ jobs:
           run: ./tmp.exe
 
   run_macos:
-    runs-on: macos-latest
+    runs-on: macos-11
 
     steps:
       - uses: actions/checkout@v2
@@ -58,17 +58,4 @@ jobs:
       - name: Run the compiler on runnable_example.memeasm
         run: ./memeasm -d -o tmp .github/workflows/runnable_example.memeasm
       - name: Run the executable
-        continue-on-error: true
-        run: |
-          ulimit -c unlimited   
-          sudo ./tmp
-      - name: make core-dumps accessible
-        run: sudo chmod -R +rwx /cores/*
-      - uses: actions/upload-artifact@master # capture all crashes as build artifacts
-        with:
-          name: crashes
-          path: /cores
-      - uses: actions/upload-artifact@master # upload executable
-        with:
-          name: executable
-          path: ./tmp
+        run: ./tmp
