--- a/.github/workflows/publish-aur.yml
+++ b/.github/workflows/publish-aur.yml
@@ -3,14 +3,23 @@ name: Publish to AUR
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Repository Tag (e.g. v1.6)'     
+        required: true
+  
 
 jobs:
   aur-publish:
     runs-on: ubuntu-latest
-
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Set GITHUB_REF correctly if manually run
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        run: export GITHUB_REF=${{ github.event.inputs.version }}
       
       - name: Replace VERSION_STRING in PKGBUILD file with parameter
         run: sed -i 's/VERSION_STRING/${GITHUB_REF:1}/g' PKGBUILD
