--- a/.github/workflows/create_installers.yml
+++ b/.github/workflows/create_installers.yml
@@ -14,9 +14,6 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      - name: Install mingw-w64
-        run: sudo apt-get install mingw-w64
       
       - name: Install nfpm
         run: |
@@ -39,20 +36,11 @@ jobs:
       - name: Archive debian installer
         uses: actions/upload-artifact@v3
         with:
-          name: debian-installer
-          path: memeassembly_${{ github.event.inputs.version }}_amd64.deb
+          name: memeasm_${{ github.event.inputs.version }}_amd64.deb
+          path: memeasm_${{ github.event.inputs.version }}_amd64.deb
           
       - name: Archive rpm installer
         uses: actions/upload-artifact@v3
         with:
-          name: rpm-installer
-          path: memeassembly-${{ github.event.inputs.version }}.x86_64.rpm
-
-      - name: Compile for Windows
-        run: make windows
-
-      - name: Upload Windows executable
-        uses: actions/upload-artifact@v3
-        with:
-          name: memeasm.exe
-          path: memeasm.exe
+          name: memeasm-${{ github.event.inputs.version }}.x86_64.rpm
+          path: memeasm-${{ github.event.inputs.version }}.x86_64.rpm
