Added parameter parsing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(memeasm main.cpp parser.cpp log.cpp analyser.cpp commandConfig.cpp)
+add_executable(memeasm main.cpp parser.cpp log.cpp parameters.cpp analyser.cpp commandConfig.cpp)
 target_include_directories(memeasm PUBLIC ${PROJECT_BINARY_DIR}/src)
 target_compile_features(memeasm PUBLIC cxx_std_20)
